boulder/tests/compile_fail/type/structures/init/not_a_struct.bo
# Expected struct or union type
# found `u32`
# (6:

fn test() -> u32 {
    u32 {
        field: 17,
    }
}